--- a/web/TECAir_Reservations/src/app/components/home/home.component.html
+++ b/web/TECAir_Reservations/src/app/components/home/home.component.html
@@ -1,6 +1,7 @@
 <div><i class="fa-solid fa-house"></i></div>
 <app-navbar></app-navbar>
 <app-slides></app-slides>
-<app-see-flights></app-see-flights>
-<app-pricing></app-pricing>
-<app-place-airplane></app-place-airplane>
+
+<h2>DROPDOWN FLIES</h2>
+
+<H2>FOOTER</H2>
