--- a/web/TECAir_Reservations/src/app/components/see-flights/see-flights.component.html
+++ b/web/TECAir_Reservations/src/app/components/see-flights/see-flights.component.html
@@ -112,82 +112,8 @@
     </ul>
   </div>
 
-  <header data-bs-theme="dark">
-    <div class="collapse text-bg-dark" id="navbarHeader">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-8 col-md-7 py-4">
-            <h4>TECAir</h4>
-            <p class="text-body-secondary"></p>
-          </div>
-          <div class="col-sm-4 offset-md-1 py-4">
-            <h4>Servicios</h4>
-            <ul class="list-unstyled">
-              <li><a href="#" class="text-white">mamguebo1</a></li>
-              <li>
-                <a href="#" class="text-white">mamaguebo2</a>
-              </li>
-              <li>
-                <a href="#" class="text-white">mamaguebo3</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="navbar navbar-dark bg-dark shadow-sm">
-      <div class="container">
-        <a href="#" class="navbar-brand d-flex align-items-center">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="20"
-            height="20"
-            fill="none"
-            stroke="currentColor"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            aria-hidden="true"
-            class="me-2"
-            viewBox="0 0 24 24"
-          >
-            <path
-              d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"
-            />
-            <circle cx="12" cy="13" r="4" />
-          </svg>
-          <strong>TECAir</strong>
-        </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarHeader"
-          aria-controls="navbarHeader"
-          aria-expanded="false"
-          aria-label="تبديل التنقل"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      </div>
-    </div>
-  </header>
-
   <main>
-    <section class="py-5 text-center container">
-      <div class="row py-lg-5">
-        <div class="col-lg-6 col-md-8 mx-auto">
-          <h1 class="fw-light">Vuelos disponibles</h1>
-          <p class="lead text-body-secondary">
-            Vuela, sueña y descubre horizontes infinitos
-          </p>
-          <p>
-            <a href="#" class="btn btn-primary my-2">Refresh</a>
-            <a href="#" class="btn btn-secondary my-2">Ofertas</a>
-          </p>
-        </div>
-      </div>
-    </section>
+    <h1>DROPDOWN FLIES</h1>
 
     <div class="album py-5 bg-body-tertiary">
       <div class="container">
@@ -511,21 +437,5 @@
     </div>
   </main>
 
-  <footer class="text-body-secondary py-5">
-    <div class="container">
-      <p class="float-end mb-1">
-        <a href="#">SOporte</a>
-      </p>
-      <p class="mb-1">Pagina registrada a nombre de TECAirlines C.O</p>
-      <p class="mb-0">
-        Ante dudas envia un correo a soporte@TECAirline.com<a href="/">
-          Correo</a
-        >
-        Trabaja con nosotros<a href="../getting-started/introduction/ ">
-          su puta madre</a
-        >.
-      </p>
-    </div>
-  </footer>
   <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
 </body>
