--- a/web/TECAir_Reservations/src/app/components/sign-in/sign-in.component.html
+++ b/web/TECAir_Reservations/src/app/components/sign-in/sign-in.component.html
@@ -51,10 +51,10 @@
     <div class="form-signin w-100 m-auto">
       <img
         class="mb-4"
-        src="/docs/5.3/assets/brand/bootstrap-logo.svg"
+        src="assets/images/logo.png"
         alt=""
-        width="72"
-        height="57"
+        width="25%"
+        height="auto"
       />
       <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
@@ -81,7 +81,7 @@
           <label for="floatingPassword">Password</label>
         </div>
 
-        <div class="form-check text-start my-3">
+        <!-- <div class="form-check text-start my-3">
           <input
             class="form-check-input"
             type="checkbox"
@@ -91,7 +91,7 @@
           <label class="form-check-label" for="flexCheckDefault">
             Remember me
           </label>
-        </div>
+        </div> -->
 
         <button class="btn btn-primary w-100 py-2" type="submit">
           Sign in
