--- a/web/TECAir_Reservations/src/app/components/slides/slides.component.html
+++ b/web/TECAir_Reservations/src/app/components/slides/slides.component.html
@@ -3,48 +3,42 @@
     <div class="view w-100">
       <img
         class="d-block w-100 custom-carousel-img"
-        src="assets/images/image4.webp"
+        src="assets/images/new_york.jpg"
         alt="First slide"
       />
       <div class="mask rgba-black-light waves-light" mdbWavesEffect></div>
     </div>
     <div class="carousel-caption">
-      <h3 class="h3-responsive">Puertto rico</h3>
-      <p>
-        Explore the beauty of Puerto Rico from above! Secure your breathtaking
-        flight journey now
-      </p>
+      <h3 class="h3-responsive">Nueva York</h3>
+      <p>Nueva York un lugar turístico que no se puede perder</p>
     </div>
   </mdb-carousel-item>
   <mdb-carousel-item>
     <div class="view w-100">
       <img
         class="d-block w-100 custom-carousel-img"
-        src="assets/images/bground.jpg"
+        src="assets/images/cdmx.jpg"
         alt="Second slide"
       />
       <div class="mask rgba-black-strong waves-light" mdbWavesEffect></div>
     </div>
     <div class="carousel-caption">
-      <h3 class="h3-responsive">Tanzania</h3>
-      <p>aquí hay guerra pa</p>
+      <h3 class="h3-responsive">Cuidad de México</h3>
+      <p>Cuidad México perfecto para una escapada</p>
     </div>
   </mdb-carousel-item>
   <mdb-carousel-item>
     <div class="view w-100">
       <img
         class="d-block w-100 custom-carousel-img"
-        src="assets/images/image3.webp"
+        src="assets/images/Panama_City_panorama.jpg"
         alt="Third slide"
       />
       <div class="mask rgba-black-slight waves-light" mdbWavesEffect></div>
     </div>
     <div class="carousel-caption">
       <h3 class="h3-responsive">Panama City</h3>
-      <p>
-        Discover the wonders of Panama City from the skies! Book your
-        unforgettable flight experience today
-      </p>
+      <p>Panamá City es un destino turístico de Panamá</p>
     </div>
   </mdb-carousel-item>
 </mdb-carousel>
