--- a/web/TECAir_Reservations/src/app/components/checkout/checkout.component.html
+++ b/web/TECAir_Reservations/src/app/components/checkout/checkout.component.html
@@ -158,7 +158,7 @@
             </div>
 
             <div class="col-md-3">
-              <label for="zip" class="form-label">Zip</label>
+              <label for="zip" class="form-label">Número de Tarjeta</label>
               <input
                 type="text"
                 class="form-control"
@@ -166,7 +166,7 @@
                 placeholder=""
                 required
               />
-              <div class="invalid-feedback">Zip code required.</div>
+              <div class="invalid-feedback">Tarjeta necesaria.</div>
             </div>
           </div>
 
