--- a/web/TECAir_Reservations/src/app/components/baggage-create/baggage-create.component.html
+++ b/web/TECAir_Reservations/src/app/components/baggage-create/baggage-create.component.html
@@ -39,6 +39,18 @@
               </div>
             </div>
           </div>
+          <div class="col-md-6">
+            <div class="input-group">
+              <label class="input-group-text" for="priceInput">Price</label>
+              <input
+                type="number"
+                id="priceInput"
+                formControlName="price"
+                class="form-control"
+                readonly
+              />
+            </div>
+          </div>
         </div>
       </div>
       <hr />
