--- a/web/TECAir_Reservations/src/app/components/see-flights/see-flights.component.html
+++ b/web/TECAir_Reservations/src/app/components/see-flights/see-flights.component.html
@@ -63,7 +63,7 @@
               <p class="card-text">{{ flight.Fprice }} USD</p>
               <div class="d-flex justify-content-between align-items-center">
                 <small class="text-body-secondary"
-                  >Vuelo: {{ flight.Fnumber }}</small
+                  >Vuelo: {{ flight.fnumber }}</small
                 >
               </div>
               <div class="d-flex justify-content-between align-items-center">
