--- a/web/TECAir_Reservations/src/app/components/see-flights/see-flights.component.html
+++ b/web/TECAir_Reservations/src/app/components/see-flights/see-flights.component.html
@@ -52,15 +52,15 @@
               class="card-img-top"
               width="100%"
               height="225"
-              [src]="flight.StoImage"
+              [src]="flight.stoimage"
               [alt]=""
               style="cursor: pointer"
             />
             <div class="card-body">
               <p class="card-text">
-                {{ flight.SfromCity }} - {{ flight.StoCity }}
+                {{ flight.sfromcity }} - {{ flight.stocity }}
               </p>
-              <p class="card-text">{{ flight.Fprice }} USD</p>
+              <p class="card-text">{{ flight.fprice }} USD</p>
               <div class="d-flex justify-content-between align-items-center">
                 <small class="text-body-secondary"
                   >Vuelo: {{ flight.fnumber }}</small
@@ -68,12 +68,12 @@
               </div>
               <div class="d-flex justify-content-between align-items-center">
                 <small class="text-body-secondary"
-                  >Escala: {{ flight.StopID }}</small
+                  >Escala: {{ flight.stopid }}</small
                 >
               </div>
               <div class="d-flex justify-content-between align-items-center">
                 <small class="text-body-secondary"
-                  >Fecha: {{ flight.Fdate }}</small
+                  >Fecha: {{ flight.fdate }}</small
                 >
               </div>
             </div>
