--- a/web/TECAir_Reservations/src/app/components/baggage-create/baggage-create.component.html
+++ b/web/TECAir_Reservations/src/app/components/baggage-create/baggage-create.component.html
@@ -59,10 +59,32 @@
     <button type="button" class="btn btn-secondary" (click)="addBaggage()">
       Add
     </button>
+    <div class="mt-4">
+      <label>Precio total:</label>
+      <input
+        type="text"
+        [value]="getTotalPrice()"
+        readonly
+        class="form-control"
+      />
+    </div>
 
     <div class="d-grid gap-2 d-md-flex justify-content-md-end mt-3">
-      <button type="button" class="btn btn-primary me-md-2">Cancel</button>
-      <button type="submit" class="btn btn-primary">Create</button>
+      <button
+        type="button"
+        class="btn btn-primary me-md-2"
+        (click)="deleteLastBaggage()"
+      >
+        Delete
+      </button>
+
+      <button
+        type="submit"
+        class="btn btn-primary"
+        [disabled]="!baggageForm.valid"
+      >
+        Create
+      </button>
     </div>
   </form>
 </div>
