--- a/web/TECAir_Reservations/src/app/components/home/home.component.html
+++ b/web/TECAir_Reservations/src/app/components/home/home.component.html
@@ -1,3 +1,3 @@
 <app-navbar></app-navbar>
-<app-baggage-create></app-baggage-create>
+<app-register-user></app-register-user>
 <app-footer></app-footer>
