--- a/web/TECAir_Reservations/src/app/components/sign-in/sign-in.component.css
+++ b/web/TECAir_Reservations/src/app/components/sign-in/sign-in.component.css
@@ -114,3 +114,7 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+button:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
