--- a/web/TECAir_Reservations/src/app/components/sign-in/sign-in.component.html
+++ b/web/TECAir_Reservations/src/app/components/sign-in/sign-in.component.html
@@ -93,7 +93,11 @@
           </label>
         </div> -->
 
-        <button class="btn btn-primary w-100 py-2" type="submit">
+        <button
+          class="btn btn-primary w-100 py-2"
+          type="submit"
+          [disabled]="signInForm.invalid"
+        >
           Sign in
         </button>
       </form>
