--- a/web/TECAir_Reservations/src/app/components/home/home.component.html
+++ b/web/TECAir_Reservations/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
 <app-navbar></app-navbar>
 <app-slides></app-slides>
-<app-search-plane></app-search-plane>
+<app-checkout></app-checkout>
 <app-footer></app-footer>
