--- a/web/TECAir_Reservations/src/app/components/navbar/navbar.component.html
+++ b/web/TECAir_Reservations/src/app/components/navbar/navbar.component.html
@@ -92,7 +92,7 @@
                 </li>
 
                 <li class="nav-item">
-                  <a routerLink="/display-sign-in" class="nav-link"
+                  <a routerLink="/display-promotions" class="nav-link"
                     >Promociones</a
                   >
                 </li>
