--- a/web/TECAir_Reservations/src/app/components/navbar/navbar.component.html
+++ b/web/TECAir_Reservations/src/app/components/navbar/navbar.component.html
@@ -56,6 +56,7 @@
       >
         <div class="container-fluid">
           <a class="navbar-brand" routerLink="/home">TECAIR Reservations</a>
+          <div *ngIf="userLogged.fname!=''"> <a class="navbar-brand" routerLink="/home"> Bienvenido: {{userLogged.fname}}</a></div>
           <button
             class="navbar-toggler"
             type="button"
@@ -85,6 +86,18 @@
             </div>
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <li class="nav-item">
+                  <a class="nav-link" routerLink="/display-flights"
+                    >Check - In</a
+                  >
+                </li>
+
+                <li class="nav-item">
+                  <a class="nav-link" routerLink="/display-flights"
+                    >Editor</a
+                  >
+                </li>
+                
                 <li class="nav-item">
                   <a class="nav-link" routerLink="/display-flights"
                     >Ver Vuelos</a
