--- a/web/TECAir_Reservations/src/app/components/navbar/navbar.component.html
+++ b/web/TECAir_Reservations/src/app/components/navbar/navbar.component.html
@@ -87,13 +87,13 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
-                  <a class="nav-link" routerLink="/display-flights"
+                  <a class="nav-link" routerLink="/display-check-in"
                     >Check - In</a
                   >
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" routerLink="/display-flights"
+                  <a class="nav-link" routerLink="/display-check-in"
                     >Editor</a
                   >
                 </li>
